--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@artsy/fresnel": "^1.2.2",
     "gatsby": "^2.24.63",
     "gatsby-plugin-postcss": "^2.3.12",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
