--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "gatsby": "^2.24.63",
     "gatsby-plugin-postcss": "^2.3.12",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
-    "postcss-extend": "^1.0.5",
-    "postcss-nesting": "^7.0.1",
+    "postcss-mixins": "^7.0.1",
+    "postcss-nested": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "2.1.1"
   },
