--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
-    "postcss-mixins": "^7.0.1",
+    "postcss": "^8.1.1",
+    "postcss-extend": "^1.0.5",
     "postcss-nested": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "2.1.1"
