--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby": "^2.24.63",
     "gatsby-plugin-postcss": "^2.3.12",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-yaml": "^2.4.14",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
