--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
   },
   "dependencies": {
     "@artsy/fresnel": "^1.2.2",
+    "@types/react-transition-group": "^4.4.0",
     "gatsby": "^2.24.63",
     "gatsby-plugin-postcss": "^2.3.12",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-yaml": "^2.4.14",
     "normalize.css": "^8.0.1",
+    "postcss-import": "^12.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
     "postcss": "^8.1.1",
-    "postcss-extend": "^1.0.5",
+    "postcss-mixins": "^6.2.3",
     "postcss-nested": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "2.1.1"
