feature: add history page

--- a/src/data/header.yaml
+++ b/src/data/header.yaml
@@ -4,28 +4,21 @@
 title: 'Южная Корея'
 
 #элементы навигационной панели
-  #элементы имеют формат:
-    #1. заголовок страницы
-    #2. название файла со страницей из каталога pages
-pages: 
-  -
-    title: 'Главная'
+#элементы имеют формат:
+#1. заголовок страницы
+#2. название файла со страницей из каталога pages
+pages:
+  - title: 'Главная'
     file: 'HomePage'
-  -
-    title: 'История'
+  - title: 'История'
     file: 'HistoryPage'
-  -
-    title: 'Культура'
+  - title: 'Культура'
     file: '#'
-  -
-    title: 'Политика'
+  - title: 'Политика'
     file: '#'
-  -
-    title: 'Экономика'
+  - title: 'Экономика'
     file: '#'
-  -
-    title: 'Викторина'
+  - title: 'Викторина'
     file: '#'
-  -
-    title: 'Об авторе'
-    file: '#'
+  - title: 'Об авторе'
+    file: 'AboutPage'
