feature: finish culture page

--- a/src/data/header.yaml
+++ b/src/data/header.yaml
@@ -13,7 +13,7 @@ pages:
   - title: 'История'
     file: 'HistoryPage'
   - title: 'Культура'
-    file: '#'
+    file: 'CulturePage'
   - title: 'Политика'
     file: '#'
   - title: 'Экономика'
