feature: finish policy page

--- a/src/data/header.yaml
+++ b/src/data/header.yaml
@@ -15,7 +15,7 @@ pages:
   - title: 'Культура'
     file: 'CulturePage'
   - title: 'Политика'
-    file: '#'
+    file: 'PolicyPage'
   - title: 'Экономика'
     file: '#'
   - title: 'Викторина'
