feature: add materials

--- a/src/data/materialsPage.yaml
+++ b/src/data/materialsPage.yaml
@@ -16,3 +16,13 @@ materials:
     text: Туризм
   - href: https://www.tourister.ru/world/asia/korea-republic-of
     text: Путeводитель
+  - href: https://www.museum.go.kr/site/eng/home
+    text: Национальный музей Кореи
+  - href: https://russian.korea.net/index.jsp
+    text: Официальный сайт правительства
+  - href: http://www.studyinkorea.go.kr/ru/main.do
+    text: Обучение в Корее
+  - href: http://russian.visitkorea.or.kr/rus/index.kto#
+    text: Органицация туризма Кореи
+  - href: http://www.bok.or.kr/eng/engMain.action
+    text: Банк Кореи
