--- a/src/data/header.yaml
+++ b/src/data/header.yaml
@@ -20,8 +20,8 @@ pages:
     file: 'GeographyPage'
   - title: 'Экономика'
     file: 'EconomyPage'
-  - title: 'Викторина'
-    file: '#'
+  - title: 'Отзывы'
+    file: 'ReviewsPage'
   - title: 'Об авторе'
     file: 'AboutPage'
   - title: 'Видео'
